<resources>
    <string name="app_name">OurHabitat</string>
    <string name="key_map_debug">AIzaSyCR_h2wNnvslB5PJtK2-6LKc3u2cIdMdJ8</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="send_to">Compartir</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_radar">Radar</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_challenge">Retos</string>
    <string name="action_clear">Clear</string>
    <string name="add_dialog_organism">Que viste</string>
    <string name="add_dialog_title">Nueva observación</string>
    <string name="add_dialog_more">Más opciones</string>
    <string name="add_dialog_less">Menos opciones</string>
    <string name="default_city">Bogotá</string>
    <string name="add_dialog_comment">Comentario</string>
    <string name="add_dialog_city">Ciudad</string>
    <string name="add_dialog_time">Hora</string>
    <string name="add_dialog_date">Fecha</string>
    <string name="add_dialog_priority">Estado</string>
    <string name="home_add_area">Área</string>
    <string name="home_add_observation">Observación</string>

    <string-array name="priority_list">
        <item>N/A</item>
        <item>Trivial</item>
        <item>Menor</item>
        <item>Normal</item>
        <item>Alta</item>
        <item>Crítica</item>
    </string-array>


</resources>
