<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_radar"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_radar" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ranking" />
        <item
            android:id="@+id/nav_challanges"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_challenge" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

        </menu>
    </item>

</menu>
